--- a/index.css
+++ b/index.css
@@ -15,14 +15,14 @@ h1 {
 }
 
 .images {
-  padding-left: 150px;
+  text-align: center;
 }
 
 img {
   width: 400px;
   height: 620px;
-  padding-left: 5%; 
   padding-bottom: 10vh;
+  margin: 40px;
 }
 
 p {
