--- a/index.css
+++ b/index.css
@@ -9,8 +9,8 @@ body {
 }
 
 h1 {
-    padding-left: 200px;
-    padding-top: 150px;
+    padding-left: 30vh;
+    padding-top: 20vh;
     font-size: 64px;
 }
 
