--- a/index.css
+++ b/index.css
@@ -15,12 +15,17 @@ h1 {
     margin-bottom: 0;
 }
 
-.headshot {
-  width: 130px;
-  height: 200px;
-  padding-left: 70vw;
-  margin-top: 0;
+.top {
+  align-items: start;
 }
+
+.headshot {
+  width: 300px;
+  height: 450px;
+  margin-left: 43vw;
+  margin-top: -70vh;
+}
+
 .images {
   text-align: center;
   position: center;
@@ -31,10 +36,8 @@ h1 {
 }
 
 p {
-    padding-left: 30vh;
-    padding-right: 30vh;
-    padding-top: 10vh;
-    font-size: 23px;
+    font-size: 20px;
+    padding-right: 50vw;
 }
 
 .portfolio-content {
@@ -200,3 +203,21 @@ button {
         width: 100%;
     }
 }
+
+
+/* Portfolio Project Links */
+
+.project-link {
+  text-decoration: none;
+  font-style: italic;
+  color: #6d6d6d;
+  font-size: 18px;
+}
+
+.project-link:hover {
+  text-decoration: none;
+  cursor: pointer;
+  color: black;
+}
+
+
