--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body {
 h1 {
     padding-left: 15vw;
     padding-top: 15vh;
-    font-size: 64px;
+    font-size: 6vw;
     margin-bottom: 0;
 }
 
@@ -20,8 +20,8 @@ h1 {
 }
 
 .headshot {
-  width: 300px;
-  height: 450px;
+  width: 24vw;
+  height: 36vw;
   margin-left: 43vw;
   margin-top: -70vh;
 }
@@ -36,7 +36,7 @@ h1 {
 }
 
 p {
-    font-size: 20px;
+    font-size: 1.5vw;
     padding-right: 50vw;
 }
 
@@ -61,7 +61,7 @@ p {
   padding-top: 10vh;
 }
 button {
-  margin: 20px;
+  margin: 2px;
 }
 .custom-btn {
   padding: 10px 25px;
@@ -77,8 +77,8 @@ button {
 
 /**** BTN No. 4 ****/
 .btn-4 {
-  width: 130px;
-  height: 40px;
+  width: 10vw;
+  height: 6vh;
   line-height: 42px;
   padding: 0;
   border: none;
@@ -185,7 +185,7 @@ button {
     top: 15px;
     right: 35px;
     color: #f1f1f1;
-    font-size: 40px;
+    font-size: 8vh;
     font-weight: bold;
     transition: 0.3s;
 }
