--- a/index.css
+++ b/index.css
@@ -60,12 +60,13 @@ p {
   padding-left: 15vw;
   padding-top: 10vh;
 }
+
 button {
-  margin: 2px;
+  margin: 20px;
 }
 .custom-btn {
   padding: 10px 25px;
-  font-family: 'Avenir', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   background: transparent;
   outline: none !important;
@@ -75,56 +76,67 @@ button {
   display: inline-block;
 }
 
-/**** BTN No. 4 ****/
-.btn-4 {
-  width: 10vw;
-  height: 6vh;
+/**** BTN No. 5 ****/
+.btn-5 {
+  width: 130px;
+  height: 40px;
   line-height: 42px;
   padding: 0;
   border: none;
 }
-.btn-4 span {
+.btn-5 span {
   position: relative;
   display: block;
   width: 100%;
   height: 100%;
 }
-.btn-4:before, .btn-4:after {
+.btn-5:before,
+.btn-5:after {
   position: absolute;
   content: "";
   right: 0;
-  top: 0;
-  background: #000;
-  transition: all 0.3s ease;
-}
-.btn-4:before {
-  height: 50%;
-  width: 2px;
-}
-.btn-4:after {
-  width: 20%;
-  height: 2px;
-}
-.btn-4:hover:before {height: 100%;}
-.btn-4:hover:after {width: 100%;}
-.btn-4 span:before, .btn-4 span:after {
-  position: absolute;
-  content: "";
-  left: 0;
   bottom: 0;
   background: #000;
   transition: all 0.3s ease;
 }
-.btn-4 span:before {
-  width: 2px;
+.btn-5:before {
   height: 50%;
+  width: 2px;
 }
-.btn-4 span:after {
+.btn-5:after {
   width: 20%;
   height: 2px;
 }
-.btn-4 span:hover:before {height: 100%;}
-.btn-4 span:hover:after {width: 100%;}
+.btn-5:hover:before {
+  height: 100%;
+}
+.btn-5:hover:after {
+  width: 100%;
+}
+.btn-5 span:before,
+.btn-5 span:after {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  background: #000;
+  transition: all 0.3s ease;
+}
+.btn-5 span:before {
+  width: 2px;
+  height: 50%;
+}
+.btn-5 span:after {
+  width: 20%;
+  height: 2px;
+}
+.btn-5 span:hover:before {
+  height: 100%;
+}
+.btn-5 span:hover:after {
+  width: 100%;
+}
+
 
 /* The Modal (background) */
 .modal {
