--- a/index.css
+++ b/index.css
@@ -67,6 +67,7 @@ button {
 .custom-btn {
   padding: 10px 25px;
   font-family: "Roboto", sans-serif;
+  font-size: 1.5vh;
   font-weight: 500;
   background: transparent;
   outline: none !important;
@@ -78,9 +79,9 @@ button {
 
 /**** BTN No. 5 ****/
 .btn-5 {
-  width: 130px;
-  height: 40px;
-  line-height: 42px;
+  width: 8vw;
+  height: 4vh;
+  line-height: 4vh;
   padding: 0;
   border: none;
 }
@@ -135,42 +136,6 @@ button {
 }
 .btn-5 span:hover:after {
   width: 100%;
-}
-
-
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-}
-
-/* Modal Content (image) */
-.modal-content {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
-}
-
-/* Caption of Modal Image */
-#caption {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
-    text-align: center;
-    color: #ccc;
-    padding: 10px 0;
-    height: 150px;
 }
 
 /* Add Animation */
