--- a/css/style.css
+++ b/css/style.css
@@ -105,11 +105,10 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 }
 /* Header Section */
 .intro {
-	display: table;
 	width: 100%;
+    height: auto;
 	padding: 0;
-	margin-bottom: 100px;
-	background: url(../img/DKLR.pdf) no-repeat right top;
+	background-size: 100%;
 	background-color: #e5e5e5;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -127,8 +126,8 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	font-size: 22px;
 }
 header .intro-text {
-	padding-top: 250px;
-	padding-bottom: 200px;
+	padding-top: 50px;
+	padding-bottom: 30px;
 }
 
 .buttons {
