--- a/css/style.css
+++ b/css/style.css
@@ -105,19 +105,21 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 }
 /* Header Section */
 .intro {
+	display: table;
 	width: 100%;
-    height: auto;
 	padding: 0;
-	background-size: 100%;
+	margin-bottom: 80px;
+	background: url(../img/intro-bg.jpg) no-repeat right top;
+	background: opacity: 0.5;
 	background-color: #e5e5e5;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
 	-o-background-size: cover;
 }
-
 .intro .fa {
 	font-size: 94px;
+	margin-bottom: 40px;
 	color: #fff;
 }
 .intro p {
@@ -126,16 +128,8 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	font-size: 22px;
 }
 header .intro-text {
-	padding-top: 50px;
-	padding-bottom: 30px;
-}
-
-.buttons {
-	font-size: 94px;
-	margin-bottom: 40px;
-	color: #fff;
-	padding-bottom: 30px;
-	padding-left: 5vw;
+	padding-top: 250px;
+	padding-bottom: 200px;
 }
 /* Portfolio Section */
 #portfolio {
